Fixed zooming out of viewpoint
Made the container twice as large and pushed it back so it matches the original viewpoint.

--- a/style/app-style.css
+++ b/style/app-style.css
@@ -34,6 +34,7 @@ body {
     height: 100vh;
     color: var(--text-color);
     overflow: hidden;
+    background-color: var(--background-color);
 }
 
 #side-menu {
@@ -51,10 +52,12 @@ body {
 #container {
     padding: 20px;
     margin-left: 110px; /* Same as the width of the sidebar */
-    height: 100%;
     background-color: var(--background-color);
     position: absolute;
-    width: 100%;
+    height: 200%;
+    width: 200%;
+    top: -50%;      /* Pushes back the container */
+    left: -50%;     /* so the view can be in the middle*/
     transition: all .2s;    /* Makes zooming smooth */
 }
 
